refactored code: switched to List.of, Set.of and Map.of where possible