@@ -794,7 +794,7 @@ public abstract class AbstractProcessPlugin implements ProcessPlugin
 	public boolean taskFieldsAvailable(Process process, String elementType, String elementId,
 			ExtensionElements extensionElements)
 	{
-		Collection<CamundaField> fields = extensionElements == null ? Collections.emptySet()
+		Collection<CamundaField> fields = extensionElements == null ? List.of()
 				: extensionElements.getChildElementsByType(CamundaField.class);
 
 		String instantiatesCanonical = null;
@@ -1240,7 +1240,7 @@ public abstract class AbstractProcessPlugin implements ProcessPlugin
 		{
 			ProcessIdAndVersion processIdAndVersion = model.getProcessIdAndVersion();
 
-			List<FileAndResource> resources = fhirResources.getOrDefault(processIdAndVersion, Collections.emptyList());
+			List<FileAndResource> resources = fhirResources.getOrDefault(processIdAndVersion, List.of());
 			if (resources.isEmpty())
 			{
 				logger.warn(
