@@ -4,8 +4,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Stream;
@@ -97,30 +95,27 @@ public class RoleConfigTest
 		assertNotNull(roles.getEntries());
 		assertEquals(5, roles.getEntries().size());
 
-		assertMapping("foo", Arrays.asList(
+		assertMapping("foo", List.of(
 				"f7f9ef095c5c246d3e8149729221e668b6ffd9a117fe23e2687658f6a203d31a0e769fb20dc2af6361306717116c700c5905a895a7311057af461c5d78a257b5"),
-				Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-				Arrays.asList(TestRole.foo, TestRole.bar, TestRole.baz), Collections.emptyList(),
+				List.of(), List.of(), List.of(), List.of(TestRole.foo, TestRole.bar, TestRole.baz), List.of(),
 				roles.getEntries().get(0));
 
-		assertMapping("bar", Arrays.asList(
+		assertMapping("bar", List.of(
 				"2d259cc15ee2fe57bc11e1322040ee9e045dd3efb83ed1cb0f393c3bdfecaf3f6506e5573fbc213a1025a7c3dfef101fc8d85ab069e5662d666ea970c7e0cbb6",
 				"b52a8b63b030181b8b6bc9ca1e47279da4842ef7ab46c08de6c5713a4e8ecc2c1d7f8cd5c17fe4eb0fe43838ee4b020a88634ea47c520dcc7f5f966b66e69190"),
-				Arrays.asList("one@test.com", "two@test.com"), Collections.emptyList(), Collections.emptyList(),
-				Arrays.asList(TestRole.foo, TestRole.baz), Collections.emptyList(), roles.getEntries().get(1));
+				List.of("one@test.com", "two@test.com"), List.of(), List.of(), List.of(TestRole.foo, TestRole.baz),
+				List.of(), roles.getEntries().get(1));
 
-		assertMapping("test1", Collections.emptyList(), Arrays.asList("someone@test.com"), Collections.emptyList(),
-				Collections.emptyList(), Arrays.asList(TestRole.foo, TestRole.bar),
-				Collections.singletonList(new Coding().setSystem("http://test.org/fhir/CodeSystem/foo").setCode("bar")),
+		assertMapping("test1", List.of(), List.of("someone@test.com"), List.of(), List.of(),
+				List.of(TestRole.foo, TestRole.bar),
+				List.of(new Coding().setSystem("http://test.org/fhir/CodeSystem/foo").setCode("bar")),
 				roles.getEntries().get(2));
 
-		assertMapping("test2", Collections.emptyList(), Collections.emptyList(), Arrays.asList("claim_a", "claim_b"),
-				Collections.emptyList(), Arrays.asList(TestRole.foo), Collections.emptyList(),
-				roles.getEntries().get(3));
+		assertMapping("test2", List.of(), List.of(), List.of("claim_a", "claim_b"), List.of(), List.of(TestRole.foo),
+				List.of(), roles.getEntries().get(3));
 
-		assertMapping("test3", Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-				Collections.singletonList("group1"), Arrays.asList(TestRole.foo),
-				Arrays.asList(new Coding().setSystem("http://test.org/fhir/CodeSystem/foo").setCode("bar"),
+		assertMapping("test3", List.of(), List.of(), List.of(), List.of("group1"), List.of(TestRole.foo),
+				List.of(new Coding().setSystem("http://test.org/fhir/CodeSystem/foo").setCode("bar"),
 						new Coding().setSystem("http://test.org/fhir/CodeSystem/foo").setCode("baz")),
 				roles.getEntries().get(4));
 	}
