@@ -1,6 +1,6 @@
 package org.hl7.fhir.common.hapi.validation.validator;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.hl7.fhir.r5.utils.validation.IValidatorResourceFetcher;
 import org.hl7.fhir.r5.utils.validation.constants.BestPracticeWarningLevel;
@@ -15,7 +15,7 @@ public class ValidationWrapperExtension extends ValidatorWrapper
 	{
 		return new ValidationWrapperExtension().setAnyExtensionsAllowed(true)
 				.setBestPracticeWarningLevel(BestPracticeWarningLevel.Ignore).setErrorForUnknownProfiles(true)
-				.setExtensionDomains(Collections.emptyList()).setValidationPolicyAdvisor(new FhirDefaultPolicyAdvisor())
+				.setExtensionDomains(List.of()).setValidationPolicyAdvisor(new FhirDefaultPolicyAdvisor())
 				.setNoTerminologyChecks(false).setNoExtensibleWarnings(false).setNoBindingMsgSuppressed(false)
 				.setValidatorResourceFetcher(validatorResourceFetcher).setAssumeValidRestReferences(false);
 	}
