@@ -2,7 +2,7 @@ package dev.dsf.fhir.profiles;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import org.hl7.fhir.r4.model.Coding;
@@ -26,11 +26,11 @@ public class OrganizationProfileTest
 
 	@ClassRule
 	public static final ValidationSupportRule validationRule = new ValidationSupportRule(
-			Arrays.asList("dsf-organization-1.0.0.xml", "dsf-organization-parent-1.0.0.xml",
+			List.of("dsf-organization-1.0.0.xml", "dsf-organization-parent-1.0.0.xml",
 					"dsf-extension-certificate-thumbprint-1.0.0.xml", "dsf-endpoint-1.0.0.xml",
 					"dsf-extension-read-access-parent-organization-role-1.0.0.xml",
 					"dsf-extension-read-access-organization-1.0.0.xml"),
-			Arrays.asList("dsf-read-access-tag-1.0.0.xml"), Arrays.asList("dsf-read-access-tag-1.0.0.xml"));
+			List.of("dsf-read-access-tag-1.0.0.xml"), List.of("dsf-read-access-tag-1.0.0.xml"));
 
 	private final ResourceValidator resourceValidator = new ResourceValidatorImpl(validationRule.getFhirContext(),
 			validationRule.getValidationSupport());
