@@ -63,7 +63,7 @@ public class CertificateGenerator
 			"test-client", "Webbrowser Test User" };
 
 	private static final Map<String, List<String>> DNS_NAMES = Map.of("localhost",
-			Arrays.asList("localhost", "host.docker.internal", "fhir", "bpe", "ttp", "dic1", "dic2", "dic3"));
+			List.of("localhost", "host.docker.internal", "fhir", "bpe", "ttp", "dic1", "dic2", "dic3"));
 
 	private static final BouncyCastleProvider PROVIDER = new BouncyCastleProvider();
 
@@ -116,10 +116,10 @@ public class CertificateGenerator
 
 		serverCertificateFilesByCommonName = Arrays.stream(SERVER_COMMON_NAMES)
 				.map(commonName -> createCert(CertificateType.SERVER, commonName,
-						DNS_NAMES.getOrDefault(commonName, Collections.singletonList(commonName))))
+						DNS_NAMES.getOrDefault(commonName, List.of(commonName))))
 				.collect(Collectors.toMap(CertificateFiles::getCommonName, Function.identity()));
 		clientCertificateFilesByCommonName = Arrays.stream(CLIENT_COMMON_NAMES)
-				.map(commonName -> createCert(CertificateType.CLIENT, commonName, Collections.emptyList()))
+				.map(commonName -> createCert(CertificateType.CLIENT, commonName, List.of()))
 				.collect(Collectors.toMap(CertificateFiles::getCommonName, Function.identity()));
 
 		writeThumbprints();
@@ -129,14 +129,14 @@ public class CertificateGenerator
 	{
 		return serverCertificateFilesByCommonName != null
 				? Collections.unmodifiableMap(serverCertificateFilesByCommonName)
-				: Collections.emptyMap();
+				: Map.of();
 	}
 
 	public Map<String, CertificateFiles> getClientCertificateFilesByCommonName()
 	{
 		return clientCertificateFilesByCommonName != null
 				? Collections.unmodifiableMap(clientCertificateFilesByCommonName)
-				: Collections.emptyMap();
+				: Map.of();
 	}
 
 	public CertificateAuthority initCA()
@@ -634,7 +634,7 @@ public class CertificateGenerator
 		logger.info("Copying localhost private-key file to {}", localhostCertificatePrivateKey);
 		writePrivateKeyNotEncrypted(localhostCertificatePrivateKey, localhost.keyPair.getPrivate());
 
-		List<String> commonNames = Arrays.asList("dic1", "dic2", "dic3", "ttp");
+		List<String> commonNames = List.of("dic1", "dic2", "dic3", "ttp");
 		commonNames.forEach(cn -> copyDockerTest3DicTtpClientCertFiles("../../dsf-docker-test-setup-3dic-ttp/secrets/",
 				cn + "-client"));
 
